_includes/css/typography.css
.indianred {
	color: #CD5C5C;
	/* color: rbga(205,92,92,1);  */
}
	
.foxred {
	color: #E14825;
	/* color: rbga(255,72,37,1); */
}
	
.salmon {
	color: #FA8072; 
	/* color: rbga(250,128,114,1); */
}

.oldlace {
	color: #FDF5E6;
	/* color: rbga(253,245,230,1); */
}
	
.orange {
	color: #FFA500;
	/* color: rbga(255,165,0,1); */
}

.slate {
	color: #708090;
	/* color: rbga(112,128,144,1); */ 
}

.lightslate {
	color: #778899;
	/* color: rbga(119,136,153,1); */
}
	
.white {
	color: #F5F5F5;
	/* color: rbga(245,245,245,1); */
}
	
.navyblue {
	color: #213A4F;
	/* color: rgba(33,58,79,1); */
}

.grey, .gray {
	color: #666;
}
	
h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol, dl, table {
	margin-bottom: 1.5rem;
}

h1, h2, h3, h4, h5, h6, .universe {
	color: #FA8072;
}
	
.multiverse {
	font-size: 4.767rem;
	line-height: 1.0558;
	font-weight: 100;
 }

.universe {
	font-size: 3.814rem;
	line-height: 1.0723;
	font-weight: 100;
}

h1, .galaxy {
	font-size: 3.051rem;
	line-height: 1.0311;
	font-weight: 100;
}

h2, .starsystem {
	font-size: 2.441rem;
	line-height: 1.0311;
}

h3, .star {
	font-size: 1.953rem;
	line-height: 1.1278;
}

h4, .planet {
	font-size: 1.563rem;
	line-height: 1.2069;
}

h5, .organism {
	font-size: 1.25rem;
	line-height: 1.0069;
}

h6, .cell {
	font-size: 1rem;
	line-height: 1.2587;
	font-weight: 100;
}

small, .atom, caption { 
	font-size: .8rem;
	line-height: 1.1800;
	font-weight: 100;
}

.string {
	font-size: .64rem;
	line-height: 1.4750;
	font-weight: 100;
}

.serif {
	font-family: Merriweather, Times New Roman, Times, serif;
}

.w700 {
	font-weight: 700;
}

.w400 {
	font-weight: 400;
}

.w300 {
	font-weight: 300;
}

.w100 {
	font-weight: 100;
}

/* ========================================== Basic Tag Definitions  ========================================== */

p {
	color: rgba(0,0,0,.50);
	font-weight: 300;
}

hr {
	border: solid 1px #FA8072;
}

:selection {
	background-color: rgba(255,165,0,0.65); 
	color: #FFF;
}

:focus {
/*	box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-box-sizing:border-box; so border doesn't occupy exterior px space*/
	font-weight: 400;
}

a,
a:link {
	color: #fa8072;
	text-decoration: none;
	transition: all 100ms linear;
}

a:visited {
	color: #FA8072;
}

a:hover,
a:focus,
a:active {
	color: #f5f5f5;
}

a:hover,
a:active {
	outline: none;
}

a:focus {
	background-color: #708090;
	outline: 1px solid white;
}

.ohno-text {
	text-transform: capitalize;
}

#ohno ul,
#ohno li {
	list-style-type: none;
	margin: 0 0 .5rem .5rem;
	position: relative;
	color: #F5F5F5;
}

#ohno li:before {
	content:'×';
	position: absolute;
	left: -15px;
}

#ohno li a,
#ohno p {
	color: #F5F5F5;
}

#ohno li a:hover,
#error nav li a {
	color: #F5F5F5;
	font-weight: 400;
}

@media only screen and (max-width: 30em) {
	#ohno {
		padding: 0 5%;
	}
}

.copyright {
	color: rgba(0,0,0,.50);
	padding: 0 1.5rem;
}

ul, ol, li {
	margin: 0;
	padding: 0;
	border: none;
}

mark {
	background-color: rgba(250,128,114,0.25);
}

em {
	font-style:italic;
}

sub, sup {
	line-height: 1rem;
}

strong {
	font-weight: 700;
}

.center-text {
	text-align: center;
}

blockquote {
	position: relative;
}

blockquote p:before {
	content: "“";
	position: absolute;
	top: .5em;
	left: -.5em;
	font-size: 5rem;
}

blockquote p:after {
	content: "”";
	position: relative;
	top: .5em;
	right: -.5em;
	font-size: 5rem;
}

hr {
	margin: 0;
	padding: 0;
}

/* ========================================== Custom Tag Spacing Definitions  ========================================== */

.caption {
	font-style: italic;
}

.top-none {
	margin-top: 0;
}

.bottom-none {
	margin-bottom: 0;
}

.bottom-some {
	margin-bottom: 1rem;
}

.bottom-tons {
	margin-bottom: 6.5rem;
}

.about {
	margin-top: 5rem;
	margin-bottom: 5rem;
}
.about-text {
	line-height: 2rem;
}
	
/*
.piece {
	margin-bottom: 3rem;
}*/

.banner {
	padding: 1.5rem 0;
	margin: 10rem 0;
}

.banner h2 {
	color: #FA8072;
}

/* UNDER CONSTRUCTION PHASE */

.greetings {
	display:block;
	margin: 0 auto;
	overflow: hidden;
	text-align: center;
	height: 100vh;
}

.greet {
	display: block;
	vertical-align: middle;
}

.hello {
	display: block;
	margin: 15rem auto 1rem;
	overflow: auto;
}

/* WORKS */

.piece-grid {
	margin: 0 auto;
	display: block;
	overflow: auto;
}

.piece-grid ul li {
	list-style-type: none;
}

.fig {
	overflow: hidden;
	position: relative;
	padding: 0;
	margin: 0;
	display: block;
}

figure {
	display: block;
	-webkit-margin-before: 0;
	-webkit-margin-after: 0;
	-webkit-margin-start: 0;
	-webkit-margin-end: 0;
}

.fig-link {
	position: absolute;
	top: 0;
	opacity:0;
	height: 100%;
	width: 100%;
	background-color: rgba(250,128,114,.7);
}

.fig-link:hover,
.fig-link:focus,
.fig-link:active {
	opacity: 1;
}

.fig-link h3 {
	margin-top: 27%;
	transform: translateY(25px);
	-o-transform: translateY(25px);
	-ms-transform: translateY(25px);
	-moz-transform: translateY(25px);
	-webkit-transform: translateY(25px);
	transition: all ease-out 250ms;
	-o-transition: all ease-out 250ms;
	-ms-transition: all ease-out 250ms;
	-moz-transition: all ease-out 250ms;
	-webkit-transition: all ease-out 250ms;
}

.fig-link:hover h3,
.fig-link:focus h3,
.fig-link:active h3 {
	transform: translateY(0px);
}

.piece-img figcaption {
	margin: 0;
	margin-top: 0;
}

.piece-img img {
	filter: grayscale(100%);
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	-ms-filter: grayscale(100%);
	-o-filter: grayscale(100%);
	filter: gray;
	-webkit-filter: grayscale(1);	
}

.piece {
	margin: 1.5rem auto;
}

.title {
	margin: 5.5rem auto;
}

.info {
	margin: 1.5rem auto;	
}

.piece-wrapper {
	display: block;
	overflow: auto;
	padding: 0 0 2rem;
}

div , div:before, div:after{ 
     box-sizing:border-box; 
     -moz-box-sizing:border-box; 
     -webkit-box-sizing:border-box; 
     -ms-box-sizing:border-box;
     -o-box-sizing:border-box;
   }

@media only screen and (max-width: 50em) {
	.piece-wrapper {
		padding: 0 1.5rem 3rem;	
	}
}

.no-margin {
	margin: 0;
}

figcaption {
	margin-top: .5rem;
}

